--- a/page2/css2.css
+++ b/page2/css2.css
@@ -1,98 +1,172 @@
-@charset "utf-8";
-html{height: 100%;}
-body{min-height: 100%;}
-nav{border: 1px solid black;
-	height: 77px;
-	padding-left: 0.15%;
-	padding-right: 0.15%;
-	padding-top: 25px;
-	padding-bottom: 25px;
+@charset "utf-8"; 
+/* PAGE 2 */
+* {
+	box-sizing: border-box;
+}
+/* Header below. */
+body { 
+	background-color: #5CDB95;
+	font-family: "Verdana", Geneva, sans-serif;
+	margin: 0;
+	color: #EDF5D1;
+	overflow: auto;
+ }
+.nav {
+	width: 100%;
+	position: sticky;
+    top: 0;
+    font-family: "Verdana", Geneva, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    color: #05386B;
+	width: 100%;
+	background-color: #8EE4AF;
+	display: block;
+	height: 55px;
+}
+img {
+	height: 35px;
 	width: auto;
+	padding: 0px 0px 0px 0px;
 }
-.nav.nav2.nav3{width: 18%;
-	height: 40px;
-	margin-top: 17.5px;
-	line-height: 65px;
-	
+a:link {
+	color: #05386B;
 }
-.nav.nav2{
-
-	border-radius: 25px;
-	border: 1px solid black;
-	margin-left: 5.6%;
-	width: 15%;}
-.nav{height: 75px;
-	border: 1px solid black;
-	margin-left: 2.5%;
+.nav a {
 	float: left;
-	width: 30%;
-	line-height: 100px;
-	vertical-align: middle;}
-.content{padding-top: 40px;
-padding-bottom: 20px;
+	padding: 1% 5% 1% 5%;
+	text-decoration: none;
+}
+.nav a:hover {
+	background-color: yellow;
+}
+button, .boop {
+	color: #05386B;
+	font-size: 15px;
+	border: none;
+	outline: none;
+	padding: 10px 15px 9px 25px;
+	margin: 0;
+	background-color: #8EE4AF;
+}
+.boop {
+	float: right;
+	overflow: hidden;
+}
+.boop:hover .secret {
+	display: block;
+}
+.secret {
+	top: 53px;
+	display: none;
+	position: absolute;
+	background-color: #91FFEF;
+	z-index: 1;
+	padding: 5px 15px;
+	float: left;
+}
+.secret a {
+	padding: 10px 15px 10px 15px;
+	text-decoration: none;
+	display: block;
+}
+.pic {
+	height: 25px;
+	padding: 0px 0px 0px 0px;
+}
+/* Header above. */
+.content{
+	padding-top: 40px;
+	padding-bottom: 20px;
 	overflow: auto;
 }
-.container{padding-top: 30px;
-padding-bottom: 30px;
-height: auto;
-overflow: auto;}
-.headers{border: 1px solid black;
+.container{
+	padding-top: 30px;
+	padding-bottom: 30px;
+	height: auto;
+	overflow: auto;
+}
+.headers{
 	height: 100px;
 	margin: auto;
-	width: 40.4%;}
-.pics{border: 1px solid black;
+	width: 70%;
+	text-align: center;
+	font-size: 47px;
+	font-weight: bold;
+}
+.pics{
+	border: 1px solid black;
 	margin-bottom: 15px;
-width: 25%;
-height: 350px;
-margin-top: 20px;
-margin-left: 7%;
-float: left;}
-.text{border: 1px solid black;
+	width: 25%;
+	height: 350px;
+	margin-top: 20px;
+	margin-left: 7%;
+	float: left;
+}
+.text{
+	border: 1px solid black;
 	margin-bottom: 15px;
-width: 25%;
-height: 350px;
-margin-top: 20px;
-margin-left: 7%;
-float: left;}
-.dropdown{border: 1px solid black;
+	width: 25%;
+	height: 350px;
+	margin-top: 20px;
+	margin-left: 7%;
+	float: left;
+}
+.dropdown{
+	border: 1px solid black;
 	margin-bottom: 15px;
-width: 25%;
-height: 350px;
-margin-top: 20px;
-margin-left: 7%;
-float: left;}
-.mainimg{border: 1px solid black;
-width: 52.03%;
-height: 500px;
-	
-margin: auto;
-margin-top: 50px;}
-.maintxt{border: 1px solid black;
-width: 60.3%;
-height: 500px;
+	width: 25%;
+	height: 350px;
+	margin-top: 20px;
+	margin-left: 7%;
+	float: left;
+	font-size: 15px;
+	font-weight: bold;
+	font-family: "Amiko";
+}
+.mainimg{
+	border: 1px solid black;
+	width: 52.03%;
+	height: 500px;
+	margin: auto;
+	margin-top: 50px;
+}
+.maintxt{
+	width: 62%;
+	height: 290px;
+	font-size: 18px;
+	font-family: 'Amiko';
+	text-align: justify;
+	margin: auto;
+	padding-top: 20px;
+	color: #05386B;
+	font-weight: bold;
+}
 
-margin: auto;
-margin-top: 50px;}
 
 footer{
-    border: 1px solid black;
-    position: relative;
-    bottom: 0px;
+	position: relative;
+	left: 0px;
+	bottom: 0px;
+    height: 170px;
     width: 100%;
     padding-left: 0.15%;
     padding-right: 0.15%;
     padding-top: 25px;
     padding-bottom: 25px;
     margin-top: 20px;
-    ;
-    left: 0px;
+    background-color: #314269;
 
 }
 .footertitle{
 	width: 50%;
 	height: 35px;
 	margin: auto;
-	border: 1px solid black;
+	text-align: center;
+	font-size: 35px;
+	font-weight: bold;
+	color: #EDF5D1;
+
 }
 .ficontainer{
 	
@@ -130,27 +204,26 @@ footer{
 	
 }
 .fname{
-margin-top: 2px;
-	border: 1px solid black;
+	margin-top: 2px;
 	width: 20%;
 	height: 10px;
 	margin-left: 18%;
 	float: left;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
 
 	
 	
 }
 .fname2{
 	margin-top: 2px;
-	border: 1px solid black;
 	width: 20%;
 	height: 10px;
 	margin-left: 2%;
 	float: left;
 }
 .qcircle{
-	
-	border: 1px solid black;
 	width: 4%;
 	height: 0;
     padding-bottom: 4%;
@@ -158,6 +231,12 @@ margin-top: 2px;
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	
-	
+	background-color: #8EE4AF;
+	transition: width 2s, height 2s;
+}
+
+.qcircle:hover {
+	width: 8%;
+	height: 8%;
+
 }
