--- a/css.css
+++ b/css.css
@@ -101,7 +101,7 @@ li {
 	height: 430px;
   	width: 49%;
 }
-img{object-fit: contain;width: 100%;height: 100%;}
+img{object-fit: cover;width: 100%;height: 100%;}
 
 footer{
 	position: relative;
