--- a/css.css
+++ b/css.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+*{overflow-x:hidden;}
 body { background-color: #5CDB95;
 	  font-family: "Verdana", Geneva, sans-serif;
 	  margin: 0;
