--- a/css.css
+++ b/css.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
-*{overflow-x:hidden;}
+
 body { background-color: #5CDB95;
 	  font-family: "Verdana", Geneva, sans-serif;
 	  margin: 0;
 	  color: #EDF5D1;
-
+overflow-x:hidden;
  }
 nav{
 	position: sticky;
