--- a/css.css
+++ b/css.css
@@ -102,7 +102,7 @@ li {
 	height: 430px;
   	width: 49%;
 }
-img{object-fit: contain;width: 100%;}
+img{object-fit: contain;width: 100%;height:100%;}
 
 footer{
 	position: relative;
