--- a/css.css
+++ b/css.css
@@ -112,8 +112,9 @@ button, .boop {
 	height: 430px;
   	width: 49%;
 }
-diffimg{object-fit: contain;width: 100%;height:100%;}
-img{object-fit: contain;width: 100%;}
+#image{object-fit: contain;width: 100%;height:100%;}
+#icon{object-fit: contain;width: 100%;}
+#logo{object-fit:contain;height:100%;
 footer{
 	position: relative;
 	bottom: 0;
