--- a/css.css
+++ b/css.css
@@ -111,7 +111,7 @@ button, .boop {
 }
 #image{object-fit: contain;width: 100%;height:100%;}
 #icon{object-fit: contain;width: 100%;}
-#logo{object-fit:contain;height:100%;
+#logo{object-fit:contain;height:100%;}
 footer{
 	position: relative;
 	bottom: 0;
