--- a/css.css
+++ b/css.css
@@ -75,21 +75,24 @@ button, .boop {
 	background-color:#379683 ;
 	
 }
-.image{
-  width: 100%;
-  height: 500px;
-}
-.imagetitle {
+.ilovepe {
+	width: 100%;
 	text-align: center;
-  color: #EDF5D1;
-  font-size: 100px;
-  font-weight: bold;
 }
-.imagecontent{
+.jumbo {
 	text-align: center;
-  color: #EDF5D1;
-  font-size: 40px;
-  font-weight: bold;
+	color: #EDF5D1;
+	font-size: 150px;
+	font-weight: bold;
+	width: auto;
+}
+.desc {
+	text-align: center;
+	color: #EDF5D1;
+	font-size: 40px;
+	padding-left: 20%;
+	padding-right: 20%;
+	padding-bottom: 5%;
 }
 .about {
 	float: left;
