--- a/css.css
+++ b/css.css
@@ -106,14 +106,15 @@ button, .boop {
 
 .about {
 	float: left;
-	height: 330px;
-  	width: 40%;
-  	margin-left: 5%;
-  	font-size: 20px;
+	height: 415px;
+	width: 40%;
+	margin-left: 5%;
+	font-size: 27px;
 	color: #EDF5D1;
 	text-align: left;
 	padding-top: 20px;
 	font-family: 'Amiko';
+	overflow: hidden;
 }
 
 .aboutimg{
