--- a/page2/css2.css
+++ b/page2/css2.css
@@ -143,9 +143,8 @@ button, .boop {
 
 footer{
 	position: relative;
-	left: 0px;
-	bottom: 0px;
-    height: 170px;
+	bottom: 0;
+    height: 150px;
     width: 100%;
     padding-left: 0.15%;
     padding-right: 0.15%;
